--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" routerLink="">
+      <i class="fab fa-github fa-lg"></i>
+      gitconnect.
+    </a>
+  </nav>
