--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <ng-progress style="color:rgb(15, 27, 189)"></ng-progress>
+  <ng-progress style="color:#0400f8"></ng-progress>
   <form #searchField="ngForm">
     <div class="form-group" style="display: flex">
       <input [(ngModel)]="username" #user="ngModel" type="search" placeholder="search github username"
@@ -7,7 +7,7 @@
       <button (click)="searchUser()" type="submit" class="btn btn-outline-dark btn-hov"
         style="border-left-style: none; border-radius: 0"><i class="fas fa-search" style="color: #000"></i></button>
     </div>
-  
+ 
   </form>
   <hr class="style-one">
   <div *ngIf="notFound && !userProfile" class="mx-auto">
@@ -41,12 +41,12 @@
                 <p *ngIf="userProfile.company" class="card-text"><i class="fas fa-briefcase"></i>
                   {{ userProfile.company }}</p>
                 <div class="badges">
-                  <a style="color:rgb(4, 0, 248);" class="btn btn-dark btn-sm space">
-                    Followers <span style="background-color:#0019f8;"
+                  <a style="color:#0400f8;" class="btn btn-dark btn-sm space">
+                    Followers <span style="background-color:#0400f8;"
                       class="badge badge-light">{{ userProfile.followers }}</span>
                   </a>
-                  <a style="color:rgb(0, 37, 248);" class="btn btn-dark btn-sm space">
-                    Following <span style="background-color:rgb(0, 4, 248);"
+                  <a style="color:#0400f8;" class="btn btn-dark btn-sm space">
+                    Following <span style="background-color:#0400f8;"
                       class="badge badge-light">{{ userProfile.following }}</span>
                   </a>
                 </div>
@@ -72,11 +72,11 @@
             <div appCardHover class="card bottom-space">
               <div class="card-body">
                 <h3>{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
-                    style="font-size:12px; float:right; color:rgb(37, 0, 248); background-color: #393c40"
+                    style="font-size:12px; float:right; color:#0400f8; background-color: #393c40"
                     class="badge badge-secondary">{{ repo.language }}</span></h3>
                 <p>{{ repo.description }}</p>
                 <a href="{{ repo.html_url }}" target="_blank">
-                  <button style="color:rgb(66, 0, 248);" class="btn btn-dark">view on GitHub <i
+                  <button style="color:#0400f8;" class="btn btn-dark">view on GitHub <i
                       class="fab fa-github"></i></button>
                 </a>
                 <div class="date">
